<resources>
    <string name="app_name">MyMoviesApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="action_favorite" translatable="false">Favorite</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- String values for sort order-->
    <string name="pref_sort_order_label">Sort by</string>
    <string name="pref_sort_order_key">sort_by</string>
    <!-- Key name for storing location status in SharedPreferences -->
    +    <string name="pref_sort_order_status_key" translatable="false">loc-status</string>
    <!--default value-->
    <string name="pref_default_sort_order">popularity.desc</string>
    <!--options-->
    <string name="pref_sortBY_label_popularity">Popularity</string>
    <string name="pref_sortBy_label_highestRated">Highest Rated</string>

    <!--values-->
    <string name="pref_sortBY_popularity" translatable="false">popularity.desc</string>
    <string name="pref_sortBy_highestRated" translatable="false">vote_average.desc</string>

    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_trailer">TrailerActivity</string>
    <string name="details.button.favorite.add">Mark as Favorite</string>
    <string name="details.button.favorite.remove">Unmark as Favorite</string>
    <string name="title_activity_favorite">FavoriteActivity</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">mymoviesapp.example.com</string>
    <string name="content_authority">com.example.priya.mymoviesapp.app</string>
    <!-- Notification strings -->
    <string name="notification.content">Did you check the new movies today?</string>
    <string name="prefs.notification.last.key">last_notification</string>
    <!-- empty database -->
    <string name="empty_data_list">No Information Available</string>
    <string name="empty_list_no_network">
        No information available. The network is not available to fetch data.</string>
     <string name="empty_list_server_down">
        No information available. The server is not returning data.</string>
    <string name="empty_list_server_error">
        No information available. The server is not returning valid data.
        Please check for an updated version of app.</string>

    <!-- Notification Format -->
    <string name="format_notification">Did You Checked The Latest Movies Today?</string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    
    <!-- Layout String-->
<string name="overview">Overview</string>
    <string name="Details">Details</string>
    <string name="rating">Rating (10)</string>
    <string name="populatarity">Popularity</string>
    <string name="vote_Count">User Votes</string>
    <string name="release_date">Release Date</string>
    <string name="trailers">Trailers</string>
    <string name="review">User Reviews</string>

</resources>
